# serverust

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  cliff.toml  cog.toml  deny.toml  lefthook.yml  release-plz.toml  release.toml
.cargo/: mutants.toml
.github/ISSUE_TEMPLATE/: release_checklist.yml
.github/workflows/: benchmark.yml  cargo-deny.yml  cargo-machete.yml  claude-review.yml  commitlint.yml  compatibility.yml  examples-build.yml  release-plz.yml  tests.yml
docs/: INDEX.md
docs/architecture/: overview.md
docs/architecture/diagrams/: architecture.excalidraw  data-flow.excalidraw  sequence.excalidraw
docs/development/: decisions.md  for-ai-agents.md  ralph-progress.md  release-checklist.md
docs/development/decisions/: 0001-http-first-via-axum-cargo-lambda.md  0002-dynamodb-feature-opt-in-serverust-telemetry.md  0003-event-driven-crate-separada-serverust-events.md  0004-rdkafka-opt-in-feature-kafka-producer.md  0005-baseline-competitivo-examples-baselines.md  0006-rdkafka-vs-rskafka.md  0007-event-api-design-macro-builder.md
docs/guides/: dynamodb.md  event-driven.md  getting-started.md  iac-compatibility.md  lambda-tutorial.md
docs/product/: prd.md  roadmap.md  stories.json  vision.md
docs/product/competitors/: actix.md  axum.md  loco.md  release-competitive-log.md  rocket.md
docs/product/metrics/: history.json  schema.json
docs/research/: kafka-inspiration-tier-list.md  sqs-inspiration-tier-list.md
examples/baselines/axum-raw-kafka/: Cargo.toml  README.md
examples/baselines/axum-raw-kafka/src/: handler.rs  main.rs
examples/baselines/axum-raw-kafka/tests/fixtures/: kafka-wallet-event.json
examples/funds-api/: Cargo.toml  README.md  serverust.toml
examples/funds-api/src/: main.rs
examples/funds-api/src/modules/funds/: handlers.rs  mod.rs  model.rs  service.rs
examples/funds-api/src/shared/: mod.rs
examples/funds-api/tests/: funds_api.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/hello-world/tests/fixtures/: api_gw_proxy_v2.json
examples/kafka-wallet/: Cargo.toml  README.md  docker-compose.yml
examples/kafka-wallet/src/: lib.rs  main.rs
examples/kafka-wallet/tests/: dto.rs
examples/todo-api/: Cargo.toml  README.md
examples/todo-api/src/: errors.rs  handlers.rs  lib.rs  main.rs  model.rs  service.rs
examples/todo-api/tests/: todo_api.rs
scripts/: bench.sh  benchmark_ci.sh  benchmark_competitive.sh  metrics_append.sh  metrics_regression_check.sh  quality_changelog.sh  quality_complexity.sh  quality_coverage.sh  quality_cycles.sh  quality_hello_world.sh  quality_kpi_gate.sh  quality_metrics_required.sh  quality_mutation.sh
serverust-cli/: Cargo.toml
serverust-cli/src/: cli.rs  commands.rs  lib.rs  main.rs  queue.rs  queue_aws.rs  scaffold.rs  templates.rs
serverust-cli/tests/: asyncapi_cli.rs  cli_parse.rs  commands.rs  queue_cli.rs  scaffold.rs
serverust-core/: Cargo.toml
serverust-core/src/: app.rs  config.rs  container.rs  error.rs  lib.rs  openapi.rs  pipeline.rs  route.rs  validation.rs
serverust-core/src/events/: mod.rs
serverust-core/tests/: config.rs  di.rs  events.rs  middleware.rs  openapi.rs  routes.rs  validation.rs
serverust-events/: Cargo.toml
serverust-events/src/: asyncapi.rs  kafka.rs  lib.rs  producer.rs  retry.rs  router.rs  runtime.rs
serverust-events/src/broker/: in_memory.rs  kafka.rs  lambda.rs  mod.rs
serverust-events/src/extract/: mod.rs
serverust-events/src/sqs/: consumer.rs  delete.rs  extract.rs  fifo_producer.rs  heartbeat.rs  layers.rs  mod.rs  observability.rs  producer.rs  standalone.rs  subscriber.rs
serverust-events/tests/: asyncapi_from_macros.rs  asyncapi_spec.rs  broker_trait.rs  event_router.rs  extractors.rs  in_memory_broker.rs  kafka_broker_dispatch.rs  kafka_record.rs  lambda_broker.rs  macros.rs  macros_sqs.rs  macros_sqs_dlq.rs  macros_sqs_fifo.rs  producer_singleton.rs  retry_policy.rs  runtime.rs  sqs_consumer.rs  sqs_delete.rs  sqs_dlq.rs  sqs_extractors.rs  sqs_fifo.rs  sqs_heartbeat.rs  sqs_idempotency.rs  sqs_observability.rs  sqs_producer.rs  sqs_standalone.rs  sqs_tower.rs  transport_parity.rs
serverust-events/tests/fixtures/kafka/: msk-v1.json
serverust-events/tests/fixtures/sqs/: batch_10.json  standard.json
serverust-lambda/: CHANGELOG.md  Cargo.toml
serverust-lambda/src/: lib.rs
serverust-lambda/tests/: event_dispatch.rs  lambda_to_axum.rs
serverust-lambda/tests/fixtures/: apigw_v1_get.json  apigw_v2_post.json  lambda_function_url_get.json
serverust-macros/: Cargo.toml
serverust-macros/src/: lib.rs
serverust-macros/tests/: kafka_consumer_runtime.rs  trybuild.rs
serverust-macros/tests/ui/: fail_fifo_missing_metadata.rs  fail_fifo_missing_metadata.stderr  fail_fifo_producer_missing_group_id.rs  fail_fifo_producer_missing_group_id.stderr  fail_metadata_on_standard.rs  fail_metadata_on_standard.stderr  pass_basic.rs  pass_dynamo_table.rs  pass_with_state.rs
serverust-telemetry/: CHANGELOG.md  Cargo.toml
serverust-telemetry/src/: correlation.rs  dynamo.rs  emf.rs  idempotency.rs  lib.rs  logger.rs  otel.rs  tower.rs
serverust-telemetry/tests/: correlation.rs  dynamo.rs  emf.rs  idempotency.rs  idempotency_lock.rs  logger.rs  metric_macro.rs
