[workspace]
members = [
    "serverust-core",
    "serverust-macros",
    "serverust-cli",
    "serverust-lambda",
    "serverust-telemetry",
    "examples/hello-world",
    "examples/funds-api",
    "examples/todo-api",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
authors = ["Jaime Junior <jaime.odair@investtools.com.br>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JaimeJunr/serverust"
homepage = "https://github.com/JaimeJunr/serverust"
documentation = "https://docs.rs/serverust-core"
readme = "README.md"
keywords = ["lambda", "serverless", "aws", "framework", "api"]
categories = ["web-programming", "web-programming::http-server", "asynchronous"]
