[package]
name = "serverust-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI serverust: scaffolding (new/generate), dev, build, deploy lambda, info, openapi."

[[bin]]
name = "serverust"
path = "src/main.rs"

[lib]
name = "serverust_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
