[package]
name = "serverust-cli"
version = "0.1.6"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI serverust: scaffolding (new/generate), dev, build, deploy lambda, info, openapi."

[[bin]]
name = "serverust"
path = "src/main.rs"

[lib]
name = "serverust_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
aws-sdk-sqs = "1"
aws-config = { version = "1", default-features = false, features = ["rt-tokio"] }
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
tempfile = "3"
