[package]
name = "serverust-events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Suporte event-driven opt-in para serverust: extractors tipados para Kafka, SQS, EventBridge."

[features]
default = []
# Habilita InMemoryBroker para testes sem broker físico.
in-memory = []
# Habilita o KafkaBroker (rdkafka + librdkafka C). Off por default — apps que
# só consomem Kafka via Lambda trigger não pagam o custo de librdkafka.
kafka = [
    "dep:rdkafka",
    "dep:aws-msk-iam-sasl-signer",
    "dep:aws-config",
    "dep:aws-types",
    "tokio/rt",
    "tokio/sync",
    "tokio/macros",
]
# Mantido por compatibilidade com v0.1.x. `kafka` é o novo umbrella.
kafka-producer = ["kafka"]

[dependencies]
aws_lambda_events = { version = "1.2", default-features = false, features = ["kafka"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "1"
async-trait = "0.1"
# tokio/time sempre disponível — necessário para sleep no backoff exponencial.
# Features de runtime (rt, sync, macros) ativas apenas com feature `kafka`.
tokio = { version = "1", features = ["time"] }

# Opt-in via feature `kafka` (e o alias `kafka-producer`).
# `ssl` é necessário para SASL_SSL e habilita OAUTHBEARER nativamente em
# librdkafka. NÃO habilitar `sasl` — ela puxa libsasl2-dev (Cyrus) e quebra
# build local; OAUTHBEARER para MSK IAM não depende de Cyrus SASL.
rdkafka = { version = "0.35", default-features = false, features = ["cmake-build", "tokio", "ssl"], optional = true }
aws-msk-iam-sasl-signer = { version = "1.0", optional = true }
aws-config = { version = "1", optional = true, default-features = false, features = ["rt-tokio"] }
aws-types = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
