[package]
name = "serverust-lambda"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Runtime dual do serverust: HTTP local e AWS Lambda via lambda_http."

[dependencies]
serverust-core = { path = "../serverust-core", version = "0.1.0" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
lambda_http = { version = "1.2", default-features = false, features = [
    "apigw_rest",
    "apigw_http",
    "alb",
] }
aws_lambda_events = { version = "1.2", default-features = false, features = [
    "apigw",
    "alb",
] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serverust-macros = { path = "../serverust-macros", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.20", features = ["derive"] }
utoipa = { version = "5", features = ["macros"] }
