[package]
name = "serverust-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Macros declarativas do serverust: roteamento, derives ApiError/Validate, injectable, metric."

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
trybuild = "1"
serverust-core = { path = "../serverust-core" }
serverust-events = { path = "../serverust-events" }
serverust-telemetry = { path = "../serverust-telemetry" }
aws_lambda_events = { version = "1.2", default-features = false, features = ["kafka"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
base64 = "0.22"
