[package]
name = "serverust-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Telemetria nativa do serverust: logger JSON, correlation X-Ray, métricas EMF, idempotência."

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
http = "1"
axum = { version = "0.8", default-features = false }
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "rt"] }

# Optional: OpenTelemetry/X-Ray integration. Feature `otel` mantém o build
# default leve; usuários que precisam de X-Ray ativam explicitamente.
tracing-opentelemetry = { version = "0.27", optional = true }
opentelemetry = { version = "0.26", optional = true }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"], optional = true }
opentelemetry-aws = { version = "0.14", optional = true }

# Optional: DynamoDB-backed IdempotencyStore. Feature `dynamodb` evita
# pulled-in aws-sdk no build default (preserva binário enxuto < 10MB).
aws-sdk-dynamodb = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

[features]
default = []
otel = [
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-aws",
]
dynamodb = ["dep:aws-sdk-dynamodb", "dep:aws-config"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
serverust-macros = { path = "../serverust-macros", version = "0.2.0" }
